convert °C to °F using JS

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/337be747ec.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="mystyle.css">
     <title>Temperature</title>
 </head>
 <body>
     <h1>Programming Fundamentals</h1>
 
+    <button onclick="calculator()">Calculator</button>
 
+    <div id="results">
+
+    </div>
+    <!--
     <script src="./scripts/calculator.js"></script>
+    -->
+    <script src="./scripts/if-else-and-for.js"></script>
 </body>
 </html>
