updated C to F conversion

--- a/celsius index.html
+++ b/celsius index.html
@@ -23,7 +23,9 @@
     
     <button class="btn-details" onclick="convert()">CONVERT</button>
 <div class="para-container">
-    <div id="results"></div>
+    <div id="results">
+        
+    </div>
 </div>
     <!--
     <script src="./scripts/calculator.js"></script>
